--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -17,11 +17,11 @@
           </div>
           <div>
             <strong>Last Active:</strong>
-            <p>{{user.lastActive}}</p>
+            <p>{{user.lastActive | timeAgo}}</p>
           </div>
           <div>
             <strong>Member since:</strong>
-            <p>{{user.created}}</p>
+            <p>{{user.created | date: 'mediumDate'}}</p>
           </div>
           <div class="card-footer">
             <div class="btn-group d-flex">
@@ -37,13 +37,13 @@
         <tabset class="member-tabset">
           <tab heading="About {{user.knownAs}}">
             <h4>Description</h4>
-            <p>{{user.introduction}}</p>
+            <p>{{user.introduction || 'Introduction'}}</p>
             <h4>Looking For</h4>
-            <p>{{user.lookingFor}}</p>
+            <p>{{user.lookingFor || 'Looking For'}}</p>
           </tab>
           <tab heading="Interests">
             <h4></h4>
-            <p>{{user.interests}}</p>
+            <p>{{user.interests || 'Interests'}}</p>
           </tab>
           <tab heading="Photos">
             <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
